fixing answer removal

--- a/avAdmin/admin-directives/question/question.html
+++ b/avAdmin/admin-directives/question/question.html
@@ -184,7 +184,7 @@
                                 <i
                                   class="fa fa-times fa-sw"
                                   ng-if="electionEditable()"
-                                  ng-click="delOption($parent.$index, $index)">
+                                  ng-click="delOption(questionIndex(), $index)">
                                 </i>
                             </div>
                         </div>
