--- a/avBooth/available-options-directive/available-options-directive.html
+++ b/avBooth/available-options-directive/available-options-directive.html
@@ -27,3 +27,15 @@
     ng-i18next="avBooth.noResults">
   </div>
 </div>
+<div class="col-xs-12" ng-if="layout === 'details'">
+  <div avb-detail-option
+    ng-repeat="option in filteredOptions"
+    class="animate-repeat"
+    ng-class="{selected: option.selected > -1}">
+  </div>
+  <div
+    class="animate-repeat padded-left"
+    ng-if="filteredOptions.length == 0"
+    ng-i18next="avBooth.noResults">
+  </div>
+</div>
