initial catalan translation, only part of the voting booth for now

--- a/avUi/change-lang-directive/change-lang-directive.html
+++ b/avUi/change-lang-directive/change-lang-directive.html
@@ -5,4 +5,6 @@
 <ul class="dropdown-menu" role="menu">
   <li><a ng-click="changeLang('en')">en</a></li>
   <li><a  ng-click="changeLang('es')">es</a></li>
+    <li><a  ng-click="changeLang('ca')">ca</a></li>
+
 </ul>
