make blank vote height equal to all

--- a/avBooth/available-options-directive/available-options-directive.html
+++ b/avBooth/available-options-directive/available-options-directive.html
@@ -34,6 +34,11 @@
         avBooth.voteInBlank
       </span>
     </div>
+    <a
+      class="external-link text-center"
+      target="_blank"
+      ng-click="$event.preventDefault()">
+    </a>
   </div>
   <div
     class="animate-repeat padded-left"
