--- a/avBooth/multi-question-directive/multi-question-directive.html
+++ b/avBooth/multi-question-directive/multi-question-directive.html
@@ -23,7 +23,7 @@
     <div class="container">
       <div class="hidden unfixed-top-height"></div>
       <h1>{{stateData.question.title}}</h1>
-      <p ng-bind-html="stateData.question.description | addTargetBlank"></p>
+      <p class="description" ng-bind-html="stateData.question.description | addTargetBlank"></p>
     </div>
   </div>
 </div>
