--- a/avBooth/detail-option-directive/detail-option-directive.html
+++ b/avBooth/detail-option-directive/detail-option-directive.html
@@ -3,7 +3,7 @@
     <span ng-i18next="avBooth.removeSelectedItem"></span>
     <span class="glyphicon glyphicon-remove"></span>
   </div>
-  <span class="show-value" ng-click="toggleSelectItem(option)">{{option.text}}</span>
+  <span class="show-value" ng-click="toggleSelectItem(option)" ng-bind-html="option.text"></span>
   <button
     class="btn btn-default btn-right"
     ng-class="{'in': isOpen}"
@@ -17,7 +17,6 @@
   </button>
   <div
   ng-if="isOpen"
-  class="details"  ng-click="toggleSelectItem(option)">
-    {{option.details}}
+  class="details"  ng-click="toggleSelectItem(option)" ng-bind-html="option.details">
   </div>
 </div>
