add agora voting title to the page

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html id="ng-app" ng-app="agora-core-view">
   <head>
-    <title></title>
+    <title>Agora Voting</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta charset="utf-8" />
     <link href="themes/default/app.less" type="text/css" rel="stylesheet/less" id="themes" />
