change help link in admin

--- a/avAdmin/admin-head-directive/admin-head-directive.html
+++ b/avAdmin/admin-head-directive/admin-head-directive.html
@@ -19,7 +19,7 @@
 
             <li>
               <a
-                href="https://groups.google.com/forum/#!forum/agora-voting"
+                href="https://bit.ly/avguiadeuso"
                 target="_blank">
                 <i class="fa fa-question-circle"></i>
               </a>
