improve flashing of info

--- a/avBooth/multi-question-directive/multi-question-directive.html
+++ b/avBooth/multi-question-directive/multi-question-directive.html
@@ -108,7 +108,7 @@
 
     <!-- next button -->
     <div class="row hidden" ng-cloak av-affix-bottom="stateData.affixIsSet" data-force-affix-width="768">
-      <p>
+      <p class="warnings">
         <span
           class="text-brand-warning"
           id="selectMoreOptsWarning"
