--- a/avBooth/pcandidates-election-screen-directive/pcandidates-election-screen-directive.html
+++ b/avBooth/pcandidates-election-screen-directive/pcandidates-election-screen-directive.html
@@ -135,7 +135,7 @@
 
     <!-- next button -->
     <div class="row affix-bottom text-center">
-      <p>
+      <p class="warnings">
         <span
           class="text-brand-warning"
           id="maxSelectedLimitReached"
