admin: adding affix to census config etc

--- a/avAdmin/admin-directives/elcensus-config/elcensus-config.html
+++ b/avAdmin/admin-directives/elcensus-config/elcensus-config.html
@@ -48,7 +48,11 @@
     </div>
   </form>
 
-  <h4 class="header-block">
+  <div class="extra-fields-affix-placeholder"></div>
+  <h4
+    class="header-block extra-fields"
+    av-affix-top-offset="50"
+    affix-placeholder=".extra-fields-affix-placeholder">
     <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
     <span ng-i18next>avAdmin.census.extraFieldsHeader</span>
 
