--- a/avAdmin/admin-head-directive/admin-head-directive.html
+++ b/avAdmin/admin-head-directive/admin-head-directive.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-admin adminhead">
+<nav class="navbar navbar-admin adminhead navbar-fixed-top" av-affix-top=".admin-unfixed-top" role="navigation">
     <div ng-class="{'container-fluid': admin, 'container': !admin}">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
