--- a/avAdmin/admin-controller/admin-controller.html
+++ b/avAdmin/admin-controller/admin-controller.html
@@ -2,7 +2,7 @@
   <div av-admin-head loginrequired>
   </div>
 
-  <div class="container-fluid">
+  <div class="container-fluid admin-unfixed-top">
     <div class="row" id="container">
       <div av-admin-sidebar id="sidebar" class="col-sm-3">
       </div>
