adding affix to admin questions too

--- a/avAdmin/admin-directives/elcensus/elcensus.html
+++ b/avAdmin/admin-directives/elcensus/elcensus.html
@@ -64,7 +64,11 @@
         <span ng-i18next="{{ msg }}"></span>
     </div>
 
-    <h4 class="header-block">
+    <div class="affix-placeholder"></div>
+    <h4
+      class="header-block"
+      av-affix-top-offset="50"
+      affix-placeholder=".affix-placeholder">
       <span
         class="glyphicon glyphicon-chevron-right"
         aria-hidden="true">
