--- a/avAdmin/admin-directives/question/question.html
+++ b/avAdmin/admin-directives/question/question.html
@@ -224,8 +224,16 @@
             <div class="form-group">
                 <label class="col-sm-2 control-label" for="candidates" ng-i18next>avAdmin.questions.candidates.label</label>
                 <div class="col-sm-10">
-                    <p class="text-muted" ng-i18next>
-                        avAdmin.questions.candidates.placeholder
+                    <p class="text-muted">
+                        <span ng-i18next>
+                          avAdmin.questions.candidates.placeholder
+                        </span>
+                        <span
+                          class="text-brand-danger"
+                          ng-show="q.answers.length === 0"
+                          ng-i18next>
+                          avAdmin.questions.candidates.minError
+                        </span>
                     </p>
 
                     <div class="col-sm-12">
