--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
   <script src="avUi/debounce-directive.js" class="app"></script>
   <script src="avUi/inside-iframe-service.js" class="app"></script>
   <script src="avUi/percent-votes-service.js" class="app"></script>
+  <script src="avUi/checker-service.js" class="app"></script>
   <script src="avUi/add-dots-to-int-service.js" class="app"></script>
   <script src="avUi/endswith-service.js" class="app"></script>
   <script src="avUi/state-data-service.js" class="app"></script>
