--- a/avAdmin/admin-directives/elcensus-config/elcensus-config.html
+++ b/avAdmin/admin-directives/elcensus-config/elcensus-config.html
@@ -78,15 +78,22 @@
       </p>
 
       <div ng-if="electionEditable()">
-        <div class="extra-fields-wrapper disable-select" dnd-list="list">
+        <div
+          class="extra-fields-wrapper disable-select"
+          dnd-list="election.census.extra_fields">
           <div
             av-extra-field
             ng-repeat="field in election.census.extra_fields"
             dnd-draggable="field"
-            dnd-dragstart="console.log('Started to drag an item')"
-            dnd-moved="election.census.extra_fields.splice($index, 1); console.log('item moved')"
+            ng-if="!field.must"
+            dnd-moved="election.census.extra_fields.splice($index, 1)"
             dnd-effect-allowed="move">
           </div>
+        </div>
+        <div
+          av-extra-field
+          ng-repeat="field in election.census.extra_fields"
+          ng-if="field.must">
         </div>
       </div>
       <div ng-if="!electionEditable()">
