admin: allowing admin to dnd options in a question, to edit it and to edit details in some layouts
register: show a link to login in register

--- a/avAdmin/admin-directives/elcensus-config/elcensus-config.html
+++ b/avAdmin/admin-directives/elcensus-config/elcensus-config.html
@@ -86,6 +86,8 @@
             ng-repeat="field in election.census.extra_fields"
             dnd-draggable="field"
             ng-if="!field.must"
+            dnd-disable-if="!electionEditable()"
+            ng-class="{enabled: electionEditable()}"
             dnd-moved="election.census.extra_fields.splice($index, 1)"
             dnd-effect-allowed="move">
           </div>
