--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
   <script type='text/javascript' src='bower_components/papaparse/papaparse.min.js' class="lib"></script>
   <script type="text/javascript" src="bower_components/file-saver/FileSaver.min.js" class="lib"></script>
   <script src="bower_components/ng-file-upload/angular-file-upload.js" class="lib"></script>
+  <script src="bower_components/ng-autofocus/dist/ng-autofocus.js" class="lib"></script>
   <!-- Add New Bower Component JS Above -->
 
   <!-- JS from Vendor Components -->
@@ -193,6 +194,8 @@
   <script src="avAdmin/admin-directives/billinghistory/billinghistory.js" class="app"></script>
   <script src="avAdmin/admin-directives/account/account.js" class="app"></script>
   <script src="avAdmin/admin-directives/import/import.js" class="app"></script>
+  <script src="avAdmin/admin-directives/question-option-simple/question-option-simple.js" class="app"></script>
+  <script src="avAdmin/admin-directives/question-option-details/question-option-details.js" class="app"></script>
   <script src="avAdmin/import-service.js" class="app"></script>
   <!-- endof admin directives -->
 
