--- a/avAdmin/admin-directives/question/question.html
+++ b/avAdmin/admin-directives/question/question.html
@@ -238,6 +238,28 @@
                 </div>
             </div>
 
+        <!-- layout -->
+        <div class="form-group">
+            <label class="col-sm-2 control-label" for="layout" ng-i18next="avAdmin.questions.layout.label"></label>
+            <div class="col-sm-10">
+                <p class="text-muted" ng-i18next>
+                    avAdmin.questions.layout.placeholder
+                </p>
+                <div class="radio" ng-repeat="o in layouts">
+                    <label>
+                        <input
+                          type="radio"
+                          name="layout"
+                          ng-disabled="!electionEditable()"
+                          value="{{ o }}"
+                          ng-model="q.layout"/>
+                        <span ng-i18next="avAdmin.questions.layout.{{ o }}"></span>
+                    </label>
+                </div>
+            </div>
+        </div>
+
+
             <!-- Candidates -->
             <div class="form-group">
                 <label class="col-sm-2 control-label" for="candidates" ng-i18next>avAdmin.questions.candidates.label</label>
@@ -256,15 +278,39 @@
 
                     <div class="col-sm-12">
 
-                        <div class="row option" ng-repeat="a in q.answers">
-                            <div class="col-sm-10">{{ a.text }}</div>
-                            <div class="col-sm-2 buttons text-right">
-                                <i
-                                  class="fa fa-times fa-sw"
-                                  ng-if="electionEditable()"
-                                  ng-click="delOption(questionIndex(), $index)">
-                                </i>
+                        <div ng-switch="q.layout">
+                          <div
+                            dnd-list="q.answers"
+                            ng-switch-when="simple"
+                            dnd-drop="recalculateAnswerIds(item, index)">
+                            <div
+                              ng-repeat="answer in q.answers">
+                              <div
+                                dnd-draggable="answer"
+                                dnd-moved="q.answers.splice($index, 1)"
+                                dnd-effect-allowed="move"
+                                dnd-disable-if="!electionEditable()"
+                                ng-class="{editable: electionEditable()}"
+                                av-question-option-simple>
+                              </div>
                             </div>
+                          </div>
+                          <div
+                            dnd-list="q.answers"
+                            ng-switch-default
+                            dnd-drop="recalculateAnswerIds(item, index)">
+                            <div
+                              ng-repeat="answer in q.answers">
+                              <div
+                                dnd-draggable="answer"
+                                dnd-moved="q.answers.splice($index, 1)"
+                                dnd-effect-allowed="move"
+                                dnd-disable-if="!electionEditable()"
+                                ng-class="{editable: electionEditable()}"
+                                av-question-option-details>
+                              </div>
+                            </div>
+                          </div>
                         </div>
 
                         <div class="row" ng-if="electionEditable()">
