Updated plugin vars to make it easy the reload

--- a/avAdmin/admin-controller/admin-controller.html
+++ b/avAdmin/admin-controller/admin-controller.html
@@ -27,7 +27,7 @@
       </div>
       <div
         class="col-sm-9 admin-controller-content"
-        ng-repeat='template in plugins'
+        ng-repeat='template in plugins.list'
         ng-include='template.directive'
         ng-if="shortst == template.name">
       </div>
