--- a/avAdmin/admin-sidebar-directive/admin-sidebar-directive.html
+++ b/avAdmin/admin-sidebar-directive/admin-sidebar-directive.html
@@ -22,7 +22,7 @@
   </ul>
 
   <!-- plugins -->
-    <li role="presentation" ng-class="{active:state == 'admin.'+p.name, head:p.head, sub1:!p.head}" ng-repeat="p in plugins">
+    <li role="presentation" ng-class="{active:state == 'admin.'+p.name, head:p.head, sub1:!p.head}" ng-repeat="p in plugins.list">
       <a ui-sref="{{ p.link }}">
         <span ng-if="p.menu.html" ng-bind-html="p.menu.html()"></span>
         <span ng-if="!p.menu.html">
