--- a/avAdmin/admin-directives/extra-field/extra-field.html
+++ b/avAdmin/admin-directives/extra-field/extra-field.html
@@ -99,6 +99,28 @@
     </div>
   </div>
 
+  <!-- reg expr -->
+  <div
+    class="row"
+    ng-if="['text', 'int'].indexOf(field.type) !== -1">
+    <div class="form-group">
+      <label
+        for="fieldRegExInput{{$index}}"
+        class="control-label col-sm-4"
+        ng-i18next="avAdmin.census.fieldRegExLabel">
+      </label>
+      <div class="col-sm-8">
+        <input
+          type="text"
+          class="form-control"
+          ng-model="field.regex"
+          name="fieldRegExInput{{$index}}"
+          id="fieldRegExInput{{$index}}"
+          ng-i18next="[placeholder]avAdmin.census.fieldRegExPlaceholder" />
+      </div>
+    </div>
+  </div>
+
   <!-- min num -->
   <div class="row" ng-if="['password', 'code', 'text', 'textarea', 'int'].indexOf(field.type) !== -1">
     <div class="form-group">
