--- a/avAdmin/admin-directives/elcensus-config/elcensus-config.html
+++ b/avAdmin/admin-directives/elcensus-config/elcensus-config.html
@@ -86,7 +86,7 @@
             ng-repeat="field in election.census.extra_fields"
             dnd-draggable="field"
             ng-if="!field.must"
-            dnd-disable-if="!electionEditable()"
+            dnd-disable-if="!electionEditable() || extra_fields.editing === election.census.extra_fields[$index]"
             ng-class="{enabled: electionEditable()}"
             dnd-moved="election.census.extra_fields.splice($index, 1)"
             dnd-effect-allowed="move">
