--- a/avBooth/circle-option-directive/circle-option-directive.html
+++ b/avBooth/circle-option-directive/circle-option-directive.html
@@ -1,6 +1,6 @@
 <div class="clickable-opt" ng-click="toggleSelectItem(option)">
   <div class="image-wrap">
-    <img src="{{urls['Image URL']}}" />
+    <img ng-src="{{urls['Image URL']}}" />
     <div class="show-remove">
       <span ng-i18next="avBooth.removeSelectedItem"></span>
       <span class="glyphicon glyphicon-remove"></span>
