--- a/avBooth/accordion-selected-option-directive/accordion-selected-option-directive.html
+++ b/avBooth/accordion-selected-option-directive/accordion-selected-option-directive.html
@@ -2,7 +2,13 @@
   class="opt-data"
   ng-class="{'hide-link': !option.urls || option.urls.length === 0}"
   ng-click="toggleSelectItem(option)">
-  <h4 class="show-value">{{option.text}}</h4>
+  <div ng-if="!option.details || option.details.length === 0">
+    <h4 class="show-value">{{option.text}}</h4>
+  </div>
+  <div ng-if="option.details && option.details.length > 1">
+    <h3 class="show-value">{{option.text}}</h3>
+    <p>{{option.details}}</p>
+  </div>
   <div class="show-remove">
     <span ng-i18next="avBooth.removeSelectedItem"></span>
     <span class="glyphicon glyphicon-remove"></span>
