--- a/avBooth/available-options-directive/available-options-directive.html
+++ b/avBooth/available-options-directive/available-options-directive.html
@@ -11,7 +11,7 @@
     ng-i18next="avBooth.noResults">
   </div>
 </div>
-<div class="col-xs-12" ng-if="layout === 'accordion'">
+<div class="col-xs-12" ng-if="layout === 'accordion' || layout === 'conditional-accordion'">
   <div avb-accordion-options>
   </div>
 </div>
