--- a/avBooth/selected-options-directive/selected-options-directive.html
+++ b/avBooth/selected-options-directive/selected-options-directive.html
@@ -1,4 +1,4 @@
-<div class="col-xs-12" ng-if="layout === 'simple'">
+<div class="col-xs-12" ng-if="layout === 'simple' || layout === 'ahoram-primaries'">
   <div avb-simple-selected-option
     ng-repeat="option in options | avbSelectedOptions"
     class="animate-repeat"
