--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
 
   <script src="app.js" class="app"></script>
   <script src="avBooth/booth.js" class="app"></script>
+  <script src="avBooth/ahoram-primaries-screen-directive/ahoram-primaries-screen-directive.js" class="app"></script>
   <script src="avBooth/2questions-conditional-screen-directive/2questions-conditional-screen-directive.js" class="app"></script>
   <script src="avBooth/conditional-accordion-screen-directive/conditional-accordion-screen-directive.js" class="app"></script>
   <script src="avBooth/accordion-option-directive/accordion-option-directive.js" class="app"></script>
