--- a/avBooth/ahoram-primaries-option-directive/ahoram-primaries-option-directive.html
+++ b/avBooth/ahoram-primaries-option-directive/ahoram-primaries-option-directive.html
@@ -2,6 +2,7 @@
   class="opt-data"
   ng-class="{'hide-link': !option.urls || option.urls.length === 0}"
   ng-click="toggleSelectItem2(option)">
+  <img ng-src="{{option.urls[1].url}}" alt="{{option.text}}" />
   <h4 class="show-value">{{option.text}}</h4>
   <div class="show-remove">
     <span ng-i18next="avBooth.removeSelectedItem"></span>
