--- a/avBooth/ahoram-primaries-option-directive/ahoram-primaries-option-directive.html
+++ b/avBooth/ahoram-primaries-option-directive/ahoram-primaries-option-directive.html
@@ -2,7 +2,7 @@
   class="opt-data"
   ng-class="{'hide-link': !option.urls || option.urls.length === 0}"
   ng-click="toggleSelectItem2(option)">
-  <img ng-src="{{option.urls[1].url}}" alt="{{option.text}}" />
+  <img ng-src="{{getUrl('Image URL').url}}" alt="{{option.text}}" />
   <h4 class="show-value">{{option.text}}</h4>
   <div class="show-remove">
     <span ng-i18next="avBooth.removeSelectedItem"></span>
@@ -14,7 +14,7 @@
     ng-if="option.urls && option.urls.length > 0"
     class="link"
     ng-class="{'no-alcaldable': option.category == option.categoryUnified}"
-    href="{{option.urls[0].url}}"
+    href="{{getUrl('URL').url}}"
     target="_blank">
     Ver +
   </a>
