changing conditional question and link

--- a/avBooth/conditional-accordion-screen-directive/conditional-accordion-screen-directive.html
+++ b/avBooth/conditional-accordion-screen-directive/conditional-accordion-screen-directive.html
@@ -145,7 +145,7 @@
   <div class="container">
     <div class="row options-row">
       <div class="col-xs-12">
-        <h3>¿Aceptas la propuesta de programa?</h3>
+        <h3>¿Quieres que <a href="http://ahoramadrid.org/AHORAMADRID_programa_municipales_2015.pdf" target="_blank">este sea el programa</a> que lleve la candidatura de Ahora Madrid a las elecciones municipales de mayo?</h3>
       </div>
       <div class="col-xs-6">
         <div class="opt" ng-click="toggleConditionalState('yes')">
