--- a/avBooth/selected-options-directive/selected-options-directive.html
+++ b/avBooth/selected-options-directive/selected-options-directive.html
@@ -1,9 +1,22 @@
-<div class="col-xs-12" ng-if="layout === 'simple' || layout === 'ahoram-primaries'">
+<div class="col-xs-12" ng-if="layout === 'simple'">
   <div avb-simple-selected-option
     ng-repeat="option in options | avbSelectedOptions"
     class="animate-repeat"
     ng-class="{selected: option.selected > -1}"
     ng-click="toggleSelectItem(option)">
+  </div>
+  <div
+    class="padded"
+    ng-if="(options | avbSelectedOptions).length == 0"
+    ng-i18next="avBooth.noOptionsSelected">
+  </div>
+</div>
+<div class="col-xs-12" ng-if="layout === 'ahoram-primaries'">
+  <div avb-ahoram-primaries-selected-option
+    ng-repeat="option in options | avbSelectedOptions"
+    class="animate-repeat"
+    ng-class="{selected: option.selected > -1}"
+    ng-click="toggleSelectItem2(option)">
   </div>
   <div
     class="padded"
