--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
   <script src="avRegistration/fields/email-field-directive/email-field-directive.js" class="app"></script>
   <script src="avRegistration/fields/password-field-directive/password-field-directive.js" class="app"></script>
   <script src="avRegistration/fields/text-field-directive/text-field-directive.js" class="app"></script>
+  <script src="avRegistration/fields/dni-field-directive/dni-field-directive.js" class="app"></script>
   <script src="avRegistration/fields/code-field-directive/code-field-directive.js" class="app"></script>
   <script src="avRegistration/fields/tel-field-directive/tel-field-directive.js" class="app"></script>
   <script src="avRegistration/fields/bool-field-directive/bool-field-directive.js" class="app"></script>
