--- a/avRegistration/field-directive/field-directive.html
+++ b/avRegistration/field-directive/field-directive.html
@@ -3,6 +3,7 @@
   <div avr-password-field ng-switch-when="password"></div>
   <div avr-code-field ng-switch-when="code"></div>
   <div avr-text-field ng-switch-when="text"></div>
+  <div avr-dni-field ng-switch-when="dni"></div>
   <div avr-tel-field ng-switch-when="tlf"></div>
   <div avr-int-field ng-switch-when="int"></div>
   <div avr-bool-field ng-switch-when="bool"></div>
