--- a/avRegistration/fields/email-field-directive/email-field-directive.html
+++ b/avRegistration/fields/email-field-directive/email-field-directive.html
@@ -4,7 +4,7 @@
         <input type="text" class="form-control" ng-model="field.value"
                 name="emailText" id="emailText"
                 ng-i18next="[placeholder]avRegistration.emailPlaceholder" tabindex="{{index}}"
-                ng-pattern="patterns('email')" autofocus required ng-disabled="field.disabled"/>
+                ng-pattern="patterns('email')" required ng-disabled="field.disabled"/>
         <div class="input-error">
             <small
               class="error text-danger"
