convert select-all button in a deselect/select-all toggle button

--- a/avBooth/accordion-options-directive/accordion-options-directive.html
+++ b/avBooth/accordion-options-directive/accordion-options-directive.html
@@ -56,18 +56,26 @@
             {{(category.options | avbSelectedOptions).length }}
           </span>
       </div>
+      <div ng-if="category.title !== 'Candidaturas sin agrupar'">
         <div
+          ng-if="!categoryIsSelected(category)"
           class="btn btn-block btn-default select-all"
           ng-click="selectAll(category)"
-          ng-if="category.title !== 'Candidaturas sin agrupar'"
           ng-i18next>
           avBooth.ahoramPrimaries.selectAll
         </div>
-        <div avb-ahoram-primaries-option
-          ng-repeat="option in category.options"
-          class="animate-repeat"
-          ng-class="{selected: option.selected > -1}">
+        <div
+          ng-if="categoryIsSelected(category)"
+          class="btn btn-block btn-danger select-all"
+          ng-click="deselectAll(category)"
+          ng-i18next>
+          avBooth.ahoramPrimaries.deselectAll
         </div>
+      </div>
+      <div avb-ahoram-primaries-option
+        ng-repeat="option in category.options"
+        class="animate-repeat"
+        ng-class="{selected: option.selected > -1}">
       </div>
     </div>
   </div>
