--- a/avBooth/multi-question-directive/multi-question-directive.html
+++ b/avBooth/multi-question-directive/multi-question-directive.html
@@ -94,7 +94,18 @@
         class="col-xs-12 col-sm-6 padded"
         ng-if="!hideSelection"
         ng-class="{hidden: windowWidth < 768 && !stateData.affixDropDownShown, affixedSelection: windowWidth < 768 && stateData.affixIsSet}">
-        <h4 class="text-brand-success padded-left" ng-i18next="[i18next]({count: numSelectedOptions()})avBooth.questionSelectedOptionsTitle"></h4>
+        <h4
+          class="text-brand-success padded-left"
+          ng-if="!stateData.ordered"
+          ng-i18next>
+          [i18next]({count: numSelectedOptions()})avBooth.questionSelectedOptionsTitle
+        </h4>
+        <h4
+          class="text-brand-success padded-left"
+          ng-if="stateData.ordered"
+          ng-i18next>
+          [i18next]({count: numSelectedOptions()})avBooth.questionSelectedOptionsTitleOrdered
+        </h4>
         <div avb-selected-options
           layout="stateData.question.layout"
           max="stateData.question.max"
