--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
   <script src="avElection/results-controller/results-controller.js" class="app"></script>
   <script src="avElection/results-directive/results-directive.js" class="app"></script>
   <script src="avElection/plurality-at-large-results-directive/plurality-at-large-results-directive.js" class="app"></script>
+  <script src="avElection/borda-results-directive/borda-results-directive.js" class="app"></script>
   <script src="avElection/question-results-directive/question-results-directive.js" class="app"></script>
   <script src="avElection/verify-results-directive/verify-results-directive.js" class="app"></script>
   <script src="avElection/public-controller/public-controller.js" class="app"></script>
