being more strict with user input on code field

--- a/avRegistration/fields/code-field-directive/code-field-directive.html
+++ b/avRegistration/fields/code-field-directive/code-field-directive.html
@@ -8,6 +8,10 @@
             ng-model="field.value"
             ng-disabled="field.disabled"
             tabindex="{{index}}"
+            autocomplete="off"
+            minlength="8"
+            maxlength="8"
+            ng-pattern="codePattern"
             required />
         <div class="input-error">
         </div>
