improving login and adding option to resend codes

--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
   <script src="avUi/autoscroll-down-directive.js" class="app"></script>
   <script src="avUi/add-target-blank-filter.js" class="app"></script>
   <script src="avUi/html-to-text-filter.js" class="app"></script>
+  <script src="avUi/custom-delegates.js" class="app"></script>
 
   <script src="crypto/crypto.js" class="app"></script>
   <script src="crypto/random-service.js" class="app"></script>
