--- a/avRegistration/fields/tel-field-directive/tel-field-directive.html
+++ b/avRegistration/fields/tel-field-directive/tel-field-directive.html
@@ -1,15 +1,16 @@
 <div class="form-group">
-    <label for="telText" class="control-label col-sm-4" ng-i18next="avRegistration.telLabel"></label>
+    <label for="input{{index}}" class="control-label col-sm-4" ng-i18next="avRegistration.telLabel"></label>
     <div class="col-sm-8">
         <input
             type="tel"
             class="form-control"
-            id="{{index}}Text"
+            id="input{{index}}"
             ng-model="field.value"
             ng-disabled="field.disabled"
             ng-pattern="tlfPattern"
             tabindex="{{index}}"
             name="input{{index}}"
+            ng-i18next="[placeholder]avRegistration.telPlaceholder"
             required />
         <p class="help-block" ng-i18next="avRegistration.telHelp">
         </p>
