--- a/avAdmin/admin-directives/elbasic/elbasic.html
+++ b/avAdmin/admin-directives/elbasic/elbasic.html
@@ -35,7 +35,7 @@
         <!-- TODO, currently fixed auths -->
 
         <!-- layout -->
-        <div class="form-group">
+        <div class="form-group hidden">
             <label class="col-sm-2 control-label" for="layout" ng-i18next="avAdmin.basic.layout.label"></label>
             <div class="col-sm-10">
                 <p class="text-muted" ng-i18next>
@@ -56,7 +56,7 @@
         </div>
 
         <!-- theme -->
-        <div class="form-group">
+        <div class="form-group hidden">
             <label class="col-sm-2 control-label" for="theme" ng-i18next="avAdmin.basic.theme.label"></label>
             <div class="col-sm-10">
                 <p class="text-muted" ng-i18next>
