--- a/avAdmin/admin-directives/elcensus/elcensus.html
+++ b/avAdmin/admin-directives/elcensus/elcensus.html
@@ -90,6 +90,22 @@
             </a>
           </li>
           <li ng-if="election.census.voters.length">
+            <a ng-click="selectQueried(true)">
+              <i class="fa fa-download"></i>
+              <span ng-i18next>
+                avAdmin.census.selectAllShownAction
+              </span>
+            </a>
+          </li>
+          <li ng-if="election.census.voters.length">
+            <a ng-click="selectQueried(false)">
+              <i class="fa fa-download"></i>
+              <span ng-i18next>
+                avAdmin.census.deselectAllShownAction
+              </span>
+            </a>
+          </li>
+          <li ng-if="election.census.voters.length">
             <a ng-click="removeSelected()">
               <i class="fa fa-download"></i>
               <span ng-i18next>
