admin: adding edit icon to candidates

--- a/avAdmin/admin-directives/question-option-simple/question-option-simple.html
+++ b/avAdmin/admin-directives/question-option-simple/question-option-simple.html
@@ -2,7 +2,10 @@
   <span
     class="text"
     ng-if="!editing"
-    ng-click="setEdit(electionEditable() && true)">{{ answer.text }}</span>
+    ng-click="setEdit(electionEditable() && true)">
+      <span class="glyphicon glyphicon-edit"></span>
+      {{ answer.text }}
+    </span>
   <input
     type="text"
     ng-if="editing"
