--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
   <script src="avUi/add-target-blank-filter.js" class="app"></script>
   <script src="avUi/html-to-text-filter.js" class="app"></script>
   <script src="avUi/custom-delegates.js" class="app"></script>
+  <script src="avUi/learn-more-directive.js" class="app"></script>
 
   <script src="crypto/crypto.js" class="app"></script>
   <script src="crypto/random-service.js" class="app"></script>
