--- a/avBooth/review-screen-directive/review-screen-directive.html
+++ b/avBooth/review-screen-directive/review-screen-directive.html
@@ -49,20 +49,21 @@
     </div>
     <div class="row hidden" ng-cloak av-affix-bottom data-force-affix-width="768">
       <div class="col-xs-12">
-        <p ng-i18next="[html:i18next]({ballotHash: stateData.ballotHash})avBooth.reviewBallotHashText"></p>
+        <p>
+          <span ng-i18next>
+            [html:i18next]({ballotHash: stateData.ballotHash})avBooth.reviewBallotHashText
+          </span>
+          (<a
+            ng-i18next="avBooth.auditTheBallot"
+            ng-click="audit()">
+          </a>)
+        </p>
       </div>
-      <div class="col-xs-6 col-sm-8 col-md-9 no-padding">
+      <div class="col-xs-12 no-padding">
         <button
           class="btn btn-block btn-lg btn-success btn-plain"
           ng-i18next="avBooth.castTheBallot"
           ng-click="next()">
-        </button>
-      </div>
-      <div class="col-xs-6 col-sm-4 col-md-3 no-padding">
-        <button
-          class="btn btn-block btn-lg btn-plain btn-audit"
-          ng-i18next="avBooth.auditTheBallot"
-          ng-click="audit()">
         </button>
       </div>
     </div>
