--- a/avBooth/accordion-option-directive/accordion-option-directive.html
+++ b/avBooth/accordion-option-directive/accordion-option-directive.html
@@ -1,23 +1,55 @@
 <div
-  class="opt-data"
-  ng-class="{'hide-link': !option.urls || option.urls.length === 0}"
+  class="opt-data vertilize-wrapper"
+  ng-class="{'hide-link': !urls.URL, 'show-category': showCategory && !!option.category}"
   ng-click="toggleSelectItem(option)">
-  <div ng-if="!option.details || option.details.length === 0">
-    <h4 class="show-value">{{option.text}}</h4>
+
+  <span class="label label-default" ng-if="showCategory && !!option.category">
+    {{option.category}}
+  </span>
+
+  <div class="vertilize">
+    <div class="vertilize-col">
+      <img
+        av-auto-height
+        additional-height="-5"
+        parent-selector=".vertilize"
+        sibling-selector=".text-sibling"
+
+        parent
+        ng-if="!!urls['Image URL']"
+        ng-src="{{urls['Image URL']}}"
+        alt="{{option.text}}" />
+    </div>
+
+    <!-- texts -->
+    <div class="vertilize-col">
+      <div class="text-sibling">
+        <strong class="show-value">
+          <span ng-if="ordered && showSelectedPos && option.selected > -1">
+            {{option.selected + 1}}.
+          </span>
+          <span>{{option.text}}</span>
+        </strong>
+        <p class="details" ng-if="option.details && option.details.length > 1">
+          {{option.details}}
+        </p>
+      </div>
+    </div>
   </div>
-  <div ng-if="option.details && option.details.length > 1">
-    <h3 class="show-value">{{option.text}}</h3>
-    <p>{{option.details}}</p>
-  </div>
+
+  <!-- remove action -->
   <div class="show-remove">
     <span ng-i18next="avBooth.removeSelectedItem"></span>
     <span class="glyphicon glyphicon-remove"></span>
   </div>
 </div>
+
+<!-- show the link if needed -->
 <a
-  ng-if="option.urls && option.urls.length > 0"
+  ng-if="!!urls.URL"
   class="btn btn-default btn-right"
-  href="{{option.urls[0].url}}"
+  href="{{urls.URL}}"
   target="_blank">
-  {{option.urls[0].title}}
+  <span class="glyphicon glyphicon-new-window">
+  </span>
 </a>
