--- a/avBooth/available-options-directive/available-options-directive.html
+++ b/avBooth/available-options-directive/available-options-directive.html
@@ -1,17 +1,4 @@
-<div class="col-xs-12" ng-if="layout === 'simple'">
-  <div avb-simple-option
-    ng-repeat="option in filteredOptions"
-    class="animate-repeat"
-    ng-class="{selected: option.selected > -1}"
-    ng-click="toggleSelectItem(option)">
-  </div>
-  <div
-    class="animate-repeat padded-left"
-    ng-if="filteredOptions.length == 0"
-    ng-i18next="avBooth.noResults">
-  </div>
-</div>
-<div class="col-xs-12" ng-if="layout === 'accordion' || layout === 'conditional-accordion' || layout === 'ahoram-primaries'">
+<div class="col-xs-12" ng-if="layout === 'accordion' || layout === 'simple' || layout === 'details' || layout === 'conditional-accordion' || layout === 'ahoram-primaries'">
   <div avb-accordion-options>
   </div>
 </div>
@@ -41,18 +28,6 @@
     ng-class="{selected: option.selected > -1}">
   </div>
 
-  <div
-    class="animate-repeat padded-left"
-    ng-if="filteredOptions.length == 0"
-    ng-i18next="avBooth.noResults">
-  </div>
-</div>
-<div class="col-xs-12" ng-if="layout === 'details'">
-  <div avb-detail-option
-    ng-repeat="option in filteredOptions"
-    class="animate-repeat"
-    ng-class="{selected: option.selected > -1}">
-  </div>
   <div
     class="animate-repeat padded-left"
     ng-if="filteredOptions.length == 0"
