--- a/avBooth/selected-options-directive/selected-options-directive.html
+++ b/avBooth/selected-options-directive/selected-options-directive.html
@@ -1,16 +1,3 @@
-<div class="col-xs-12" ng-if="layout === 'simple'">
-  <div avb-simple-selected-option
-    ng-repeat="option in options | avbSelectedOptions"
-    class="animate-repeat"
-    ng-class="{selected: option.selected > -1}"
-    ng-click="toggleSelectItem(option)">
-  </div>
-  <div
-    class="padded"
-    ng-if="(options | avbSelectedOptions).length == 0"
-    ng-i18next="avBooth.noOptionsSelected">
-  </div>
-</div>
 <div
   class="col-xs-12"
   ng-if="layout === 'ahoram-primaries'"
@@ -33,27 +20,18 @@
 </div>
 <div
   class="col-xs-12"
-  ng-if="layout === 'accordion' || layout === 'conditional-accordion'"
+  ng-if="layout === 'accordion' || layout === 'conditional-accordion' || layout === 'simple' || layout === 'details'"
   dnd-list="options"
   dnd-drop="moveOption(item, index)">
-  <div avb-accordion-selected-option
+  <div avb-accordion-option
     dnd-draggable="option"
     dnd-effect-allowed="move"
     dnd-disable-if="!ordered || (options | avbSelectedOptions).length < 2"
     ng-repeat="option in options | avbSelectedOptions"
+    show-category="true"
+    show-selected-pos="true"
     class="animate-repeat"
     ng-class="{selected: option.selected > -1}">
-  </div>
-  <div
-    class="padded"
-    ng-if="(options | avbSelectedOptions).length == 0"
-    ng-i18next="avBooth.noOptionsSelected">
-  </div>
-</div>
-<div class="col-xs-12" ng-if="layout === 'details'">
-  <div avb-detail-selected-option
-    ng-repeat="option in options | avbSelectedOptions"
-    class="animate-repeat">
   </div>
   <div
     class="padded"
