booth: final aestetic changes to accordion layout

--- a/avBooth/accordion-option-directive/accordion-option-directive.html
+++ b/avBooth/accordion-option-directive/accordion-option-directive.html
@@ -8,7 +8,7 @@
   </span>
 
   <div class="vertilize">
-    <div class="vertilize-col">
+    <div class="vertilize-col vert-align-top">
       <img
         av-auto-height
         additional-height="-5"
