moving add actions to action list

--- a/index.html
+++ b/index.html
@@ -184,6 +184,8 @@
   <script src="avAdmin/admin-directives/create/create.js" class="app"></script>
   <script src="avAdmin/admin-directives/elections/elections.js" class="app"></script>
   <script src="avAdmin/admin-directives/elcensus/elcensus.js" class="app"></script>
+  <script src="avAdmin/admin-directives/elcensus/add-person-modal.js" class="app"></script>
+  <script src="avAdmin/admin-directives/elcensus/add-csv-modal.js" class="app"></script>
   <script src="avAdmin/admin-directives/elcensus-config/elcensus-config.js" class="app"></script>
   <script src="avAdmin/admin-directives/dashboard/dashboard.js" class="app"></script>
   <script src="avAdmin/admin-directives/dashboard/confirm-create-modal.js" class="app"></script>
